More toolbar polish, fix modal visible / input autoFocus bugs

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,3 +24,35 @@ code {
 .edit-tag {
   user-select: none;
 }
+
+.icon-wrapper {
+  position: relative;
+  padding: 0px 30px;
+  margin: 0 10px 0 10px;
+}
+
+.icon-wrapper .anticon {
+  position: absolute;
+  top: 7px;
+  width: 16px;
+  height: 16px;
+  color: rgba(0, 0, 0, 0.25);
+  font-size: 16px;
+  line-height: 1;
+}
+
+.icon-wrapper .icon-wrapper-active {
+  color: rgba(0, 0, 0, 0.45);
+}
+
+.icon-wrapper .anticon:first-child {
+  left: 9px;
+}
+
+.icon-wrapper .anticon:last-child {
+  right: 8px;
+}
+
+.ant-tag .anticon {
+  vertical-align: 0.1em;
+}
